maven to java 1.8

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/candles_db
 spring.datasource.username=postgres
 spring.datasource.password=shithappens
+
+spring.output.ansi.enabled=ALWAYS
